--- a/asciidocs/index.adoc
+++ b/asciidocs/index.adoc
@@ -1,6 +1,6 @@
-= My Project
-firstname lastname
-1.0.0, yyyy-mm-dd: Some notes
+= Üben für Test
+Pascal Goldmann
+
 ifndef::imagesdir[:imagesdir: images]
 //:toc-placement!:  // prevents the generation of the doc at this position, so it can be printed afterwards
 :sourcedir: ../src/main/java
@@ -8,14 +8,8 @@ ifndef::imagesdir[:imagesdir: images]
 :sectnums:    // Nummerierung der Überschriften / section numbering
 :toc: left
 
-//Need this blank line after ifdef, don't know why...
-ifdef::backend-html5[]
+== Klassendiagramm
 
-// print the toc here (not at the default position)
-//toc::[]
+include::plantuml/KlassenDiagramm.puml[]
 
-== Header 1
-
-
-=== Header 2
 
