--- a/asciidocs/index.adoc
+++ b/asciidocs/index.adoc
@@ -1,5 +1,5 @@
 = Üben für Test
-Pascal Goldmann, Üben
+Pascal Goldmann, Üben ist wichtig
 
 ifndef::imagesdir[:imagesdir: images]
 //:toc-placement!:  // prevents the generation of the doc at this position, so it can be printed afterwards
